  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.91 2010/03/05 13:54:37 sla Exp $
==========================================================================

2.9100
------

2.9108-517  imp: x86: new OGR-NG 32- and 64-bit cores (#4256)
            imp: x86: identification of new i5/i7 chips (#4271)
            imp: rc5-72: random subspace prefix could be stored in .ini file
	    imp: stream: faster rc5-72 core for HD5xxx GPUs

2.9107-516  imp: add cpu/os id to client request packets
                 for improved client control
            chg: cuda,stream: remove beta expiry
            new: stream: new rc5-72 2th core (#4278)
            fix: stream: Win RDP connection crash (#4235)
            chg: x86: default rc5-72 core selection for some cpus (#4193)

2.9107-515  imp: cellbe: faster OGR-NG SPU ASM core

2.9106-514  fix: all: cannot run test or bench if OS doesn't support
                      cpu count detection.
            imp: x86: Via C7-D/M Model D detection (#4246)
            fix: stream: rc5-72 added Catalyst 9.9 support
            fix: some: one thread stays asleep in 'pause when running' (#4248)
            fix: haiku: ps output changed, preventing shutdown of other dnetc
                      instances (#4173)
            imp: sparc/solaris: UltraSPARC-T2+ detection (#4250)

2.9106-513  new: amd64: two new asm ogr64 cores added and selected 
                        as default (#4183)
            new: x86: new rc5-72 go-2b core (#4193)
            chg: amd64: drop ansi rc5-72 cores
            chg: amd64: rc5-72 core selection for Atom
            fix: amd64: ogr core selection for Athlon (#4214)