@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.91 2010/03/05 13:54:37 sla Exp $
+Version change log: $Id: CHANGES.txt,v 1.92 2010/03/17 18:22:06 stream Exp $
 ==========================================================================
 
 2.9100
@@ -32,7 +32,8 @@ Version change log: $Id: CHANGES.txt,v 1.91 2010/03/05 13:54:37 sla Exp $
 2.9108-517  imp: x86: new OGR-NG 32- and 64-bit cores (#4256)
             imp: x86: identification of new i5/i7 chips (#4271)
             imp: rc5-72: random subspace prefix could be stored in .ini file
-	    imp: stream: faster rc5-72 core for HD5xxx GPUs
+            imp: stream: faster rc5-72 core for HD5xxx GPUs
+            imp: cellbe: faster OGR-NG SPU ASM core
 
 2.9107-516  imp: add cpu/os id to client request packets
                  for improved client control
